move maxDomains and allowedTemplates to billing
